- Fixed Validation Errors - Added Layouts

--- a/resources/css/dhca-base.sass
+++ b/resources/css/dhca-base.sass
@@ -62,6 +62,19 @@ html, body
         background-color: $dhca-red
         color: white    
 
+.dropdown-divider
+    border-color: $dhca-green
+
+.breadcrumb
+    margin-bottom: 0px
+    
+    .breadcrumb-item a
+        color: black
+        text-decoration: none
+
+    .breadcrumb-item + .breadcrumb-item::before
+        color: black
+
 
 .dhca-container
     background-color: #FFFFFF
@@ -74,3 +87,6 @@ html, body
 .dhca-title-box
     width: 100%
     border-bottom: 3px solid $dhca-green
+
+.bg-dhca
+    background-color: $dhca-green
