--- a/resources/css/dhca-base.sass
+++ b/resources/css/dhca-base.sass
@@ -50,7 +50,7 @@ html, body
 .btn.btn-primary:hover, .btn.btn-outline-primary:hover
     background-color: $dhca-green-hover
     border-color: $dhca-green-hover 
-    color: white
+    color: white    
 
 .toast.success
     border-color: $dhca-green
@@ -143,3 +143,9 @@ html, body
 
 .bg-dhca
     background-color: $dhca-green
+
+.action-btn
+    border-radius: 4px
+    align-content: center
+    min-height: 30px
+    min-width: 30px
